# reveal-engine

./: .gitignore  .run.swp  .travis.yml  CMakeLists.txt  LICENSE  README.md  compile_commands.json  engine.kdev4  main.cpp  opengl_example.cpp  run.sh
.kdev4/: engine.kdev4
Modules/: TestModule.cpp  TestModule.h
engine/: EngineManager.cpp  EngineManager.h  Logger.cpp  Logger.h  Timing.cpp  Timing.h
engine/Rendering/: RenderManager.cpp  RenderManager.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  RendererApi.h  Shader.cpp  Shader.h
engine/Rendering/OpenGL/: GL2DRenderable.cpp  GL2DRenderable.h  GL2DRenderer.cpp  GL2DRenderer.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h
engine/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
engine/Window/: Window.h
engine/Window/OpenGL/: GLWindow.cpp  GLWindow.h
engine/util/: FileUtil.h
shaders/: 2Dshader.frag  2Dshader.vert  3Dshader.frag  3Dshader.vert
src/: OpenGL.h
src/Core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Logger.h  Module.h  Renderer.h  Shader.cpp  Shader.h  Timing.cpp  Timing.h  Window.cpp  Window.h
src/Core/Graphics/: BasicShapes.h  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderable2D.cpp  Renderable2D.h  Renderable3D.cpp  Renderable3D.h  Renderer2D.cpp  Renderer2D.h  Renderer2DModule.cpp  Renderer2DModule.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transformation.cpp  Transformation.h
src/Core/Loggers/: ConsoleLogger.cpp  ConsoleLogger.h
src/Core/Modules/: Timing.cpp  Timing.h
src/Core/Modules/Graphics/: Camera.cpp  Camera.h  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer2DModule.cpp  Renderer2DModule.h  Shader.cpp  Texture.cpp  Texture.h
src/Core/Renderers/: Renderable2D.cpp  Renderable2D.h  Renderer2D.cpp  Renderer2D.h
src/Modules/: Renderer2DModule.cpp  Renderer2DModule.h  TestModule.cpp  TestModule.h
src/Util/: FileUtil.h  TimeUtil.h  Util.h
src/Voxel/: Block.cpp  Block.h  Chunk.cpp  Chunk.h
